hphp/hack/test/typecheck/generic_condition_type1.php.like_types.exp
File "generic_condition_type1.php", line 9, characters 17-35:
Reactive functions can only call other reactive functions. (Typing[4200])
File "generic_condition_type1.php", line 4, characters 23-42:
This function is non-reactive.
